--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
       <div class="card-inside">
         <div class="absolute top-0 left-0 w-full h-full overflow-hidden">
           <svg width="100%" height="100%" viewBox="0 0 400 560">
-            <circle cx="50" cy="50" r="30" fill="#FDE68A" opacity="0.3"/>
-            <circle cx="350" cy="100" r="40" fill="#93C5FD" opacity="0.3"/>
-            <circle cx="100" cy="500" r="50" fill="#C4B5FD" opacity="0.3"/>
-            <circle cx="300" cy="450" r="35" fill="#A7F3D0" opacity="0.3"/>
+            
           </svg>
         </div>
         <div class="z-10 text-center mt-6">
@@ -47,7 +44,7 @@
         </div>
         <div class="z-10 text-center px-4">
           <p class="text-lg text-gray-700 mb-4">
-            When I say "I love you, I see everything beautiful in you. Your presence in my life is a gift beyond words — I feel lucky to be the one who has you."
+            Dear Riya, When I say I love you, I see everything beautiful in you. Your presence in my life is a gift beyond words — I feel lucky to be the one who has you.I want to share every moment with you, today and forever
           </p>
           <p class="text-2xl text-gray-700 leading-tight font-semibold">
             HAPPY BIRTHDAY,<br>MY QUEEN. ❤️
